--- a/src/CodeGenConsole/testConfig.json
+++ b/src/CodeGenConsole/testConfig.json
@@ -1,1 +1,6 @@
-{"HeaderDirectories":[]}
+{
+  "Pch": "../../../../TestNative/pch.h",
+  "HeaderDirectories": [
+    "../../../../TestNative"
+  ]
+}
