--- a/src/TestNative/TestNative.vcxproj
+++ b/src/TestNative/TestNative.vcxproj
@@ -143,7 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\Helper.h" />
+    <ClInclude Include="CodeGen.h" />
     <ClInclude Include="DifferentNamespaceParent.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PointerChild.h" />
