Constructor cpp generator

--- a/src/TestNative/TestNative.vcxproj.filters
+++ b/src/TestNative/TestNative.vcxproj.filters
@@ -12,5 +12,6 @@
     <ClCompile Include="PointerParent.cpp" />
     <ClCompile Include="PointerChild.cpp" />
     <ClCompile Include="DifferentNamespaceParent.cpp" />
+    <ClCompile Include="Export.cpp" />
   </ItemGroup>
 </Project>
