--- a/src/CodeGenConsole/testConfig.json
+++ b/src/CodeGenConsole/testConfig.json
@@ -5,5 +5,6 @@
   ],
   "CppResultPath": "../../../../TestNative/Export.cpp",
   "HppResultPath": "../../../../TestNative/CodeGen.h",
-  "CsResultPath": "../../../../TestWrapper/TestNative.cs"
+  "CsResultPath": "../../../../TestWrapper/TestNative.cs",
+  "NativeLibraryName": "TestNative"
 }
