--- a/src/TestWrapper/TestWrapper.csproj
+++ b/src/TestWrapper/TestWrapper.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,6 +7,23 @@
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup Condition="'$(Configuration)'!='Release'">
+    <Content Include="..\x64\Debug\TestNative.dll" Link="TestNative.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\x64\Debug\TestNative.pdb" Link="TestNative.pdb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup Condition="'$(Configuration)'=='Release'">
+    <Content Include="..\x64\Release\TestNative.dll" Link="TestNative.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\x64\Release\TestNative.pdb" Link="TestNative.pdb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
@@ -17,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CodeGenWrapper\CodeGenWrapper.csproj" />
+    <ProjectReference Include="..\TestNative\TestNative.vcxproj" />
   </ItemGroup>
 
 </Project>
