Optional thread safety

--- a/src/CodeGenConsole/Properties/launchSettings.json
+++ b/src/CodeGenConsole/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CodeGenConsole": {
       "commandName": "Project",
-      "commandLineArgs": "../../../testConfig.json"
+      "commandLineArgs": "$(ProjectDir)testConfig.json"
     }
   }
 }
