--- a/src/TestNative/TestNative.vcxproj.filters
+++ b/src/TestNative/TestNative.vcxproj.filters
@@ -6,6 +6,7 @@
     <ClInclude Include="PointerChild.h" />
     <ClInclude Include="DifferentNamespaceParent.h" />
     <ClInclude Include="CodeGen.h" />
+    <ClInclude Include="SafeObject.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -13,5 +14,6 @@
     <ClCompile Include="PointerChild.cpp" />
     <ClCompile Include="DifferentNamespaceParent.cpp" />
     <ClCompile Include="Export.cpp" />
+    <ClCompile Include="SafeObject.cpp" />
   </ItemGroup>
 </Project>
