--- a/src/CodeGenConsole/CodeGenConsole.csproj
+++ b/src/CodeGenConsole/CodeGenConsole.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\CodeGenWrapper\CodeGenWrapper.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="bin\" />
+  </ItemGroup>
+
 </Project>
