--- a/src/TestNative/TestNative.vcxproj
+++ b/src/TestNative/TestNative.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="PointerChild.h" />
     <ClInclude Include="PointerParent.h" />
+    <ClInclude Include="SafeObject.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DifferentNamespaceParent.cpp" />
@@ -160,6 +161,7 @@
     </ClCompile>
     <ClCompile Include="PointerChild.cpp" />
     <ClCompile Include="PointerParent.cpp" />
+    <ClCompile Include="SafeObject.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
