--- a/src/TestNative/TestNative.vcxproj
+++ b/src/TestNative/TestNative.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="CodeGen.h" />
     <ClInclude Include="DifferentNamespaceParent.h" />
+    <ClInclude Include="DontWrap.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PointerChild.h" />
     <ClInclude Include="PointerParent.h" />
@@ -152,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DifferentNamespaceParent.cpp" />
+    <ClCompile Include="DontWrap.cpp" />
     <ClCompile Include="Export.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
