--- a/src/TestNative/TestNative.vcxproj.filters
+++ b/src/TestNative/TestNative.vcxproj.filters
@@ -8,6 +8,7 @@
     <ClInclude Include="CodeGen.h" />
     <ClInclude Include="SafeObject.h" />
     <ClInclude Include="DontWrap.h" />
+    <ClInclude Include="Lookups.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -17,5 +18,6 @@
     <ClCompile Include="Export.cpp" />
     <ClCompile Include="SafeObject.cpp" />
     <ClCompile Include="DontWrap.cpp" />
+    <ClCompile Include="Lookups.cpp" />
   </ItemGroup>
 </Project>
